# PromptDeck

./: .gitignore  KEYBINDINGS.md  LICENSE  README.md  deck_config.py  install.ps1  install.sh  prompt_deck.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: decks.toml
scripts/: render_demo.py
src/promptdeck/: __init__.py  __main__.py  app.py  cli.py  config.py  setup_ui.py
tests/: test_app.py  test_cli.py  test_config.py  test_deck_config.py  test_prompt_deck.py
